# solana-carbon-credits

./: Anchor.toml  README.md  package.json  tsconfig.json
programs/carbon/: Cargo.toml
programs/carbon/src/: lib.rs  state.rs  utils.rs
programs/carbon/src/instructions/: airdrop_cc.rs  burn_cc.rs  create_cc.rs  create_tier_collection.rs  initialize.rs  mint_cc.rs  mint_cnft.rs  mod.rs  whitelist.rs
scripts/: dump.ts
tests/: api.ts  ctx.ts  index.ts  utils.ts
tests/accounts/: USDC.json
